--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -57,7 +57,7 @@
         >
           Read More
           <svg class="about__icon" width="12" height="12">
-            <use href="./images/svg/icons.svg#arrow-small"></use>
+            <use href="./images/svg/icons.svg#btn-arrow"></use>
           </svg>
         </button>
       </div>
