--- a/src/partials/advantages.html
+++ b/src/partials/advantages.html
@@ -2,7 +2,7 @@
   <div class="container">
     <ul class="advantages__list list">
       <li class="advantages__item">
-        <div class="advantages__circle advantages__circle-cow"></div>
+        <div class="advantages__circle advantages__circle-cow animate__infinite	infinite"></div>
         <p class="advantages__point">721</p>
         <p class="advantages__text">Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</p>
       </li>
