--- a/src/sass/layouts/_advantages.scss
+++ b/src/sass/layouts/_advantages.scss
@@ -60,6 +60,10 @@
       height: 100%;
       position: absolute;
       left: 0px;
+
+      animation: pulse;
+      animation-duration: 1s;
+      animation-iteration-count: infinite;
     }
     &-ice::after {
       content: url(../images/advantages/ice-crem.sec.adv_@1x.png);
@@ -67,6 +71,10 @@
       height: 100%;
       position: absolute;
       left: 0px;
+
+      animation: pulse;
+      animation-duration: 1s;
+      animation-iteration-count: infinite;
     }
     &-weight::after {
       content: url(../images/advantages/frame.sec.adv_@1x.png);
@@ -74,6 +82,10 @@
       height: 100%;
       position: absolute;
       left: 0px;
+
+      animation: pulse;
+      animation-duration: 1s;
+      animation-iteration-count: infinite;
     }
     @media screen and (min-width: 768px) {
       margin-bottom: 32px;
