--- a/src/sass/layouts/_advantages.scss
+++ b/src/sass/layouts/_advantages.scss
@@ -49,7 +49,7 @@
   &__circle {
     display: block;
     position: relative;
-    background: var(--primery-accent-color);
+    background: transparent;
     border-radius: 25px;
     width: 50px;
     height: 50px;
@@ -61,8 +61,8 @@
       position: absolute;
       left: 0px;
 
-      animation: pulse;
-      animation-duration: 1s;
+      animation: swing;
+      animation-duration: 9s;
       animation-iteration-count: infinite;
     }
     &-ice::after {
@@ -72,8 +72,8 @@
       position: absolute;
       left: 0px;
 
-      animation: pulse;
-      animation-duration: 1s;
+      animation: swing;
+      animation-duration: 9s;
       animation-iteration-count: infinite;
     }
     &-weight::after {
@@ -83,8 +83,8 @@
       position: absolute;
       left: 0px;
 
-      animation: pulse;
-      animation-duration: 1s;
+      animation: swing;
+      animation-duration: 9s;
       animation-iteration-count: infinite;
     }
     @media screen and (min-width: 768px) {
