--- a/src/sass/layouts/_hero.scss
+++ b/src/sass/layouts/_hero.scss
@@ -1,4 +1,5 @@
 .hero {
+  position: relative;
   padding-bottom: 239px;
 
   @media screen and (min-width: 768px) {
@@ -56,6 +57,31 @@
 
 .hero-container {
   display: flex;
+}
+
+.hero-container::before {
+  position: absolute;
+  content: '';
+  display: block;
+  max-width: 1200px;
+  max-height: 384px;
+  z-index: -1;
+  background-repeat: no-repeat;
+  background-size: contain;
+  transform: translate(-16px, 205px);
+
+  // Desctop
+  @media screen and (min-width: $desktop) {
+    width: 100%;
+    height: 100%;
+    background-image: url('../images/header/points.desc_@1x.png');
+
+    @media (min-device-pixel-ratio: 2),
+      (min-resolution: 192dpi),
+      (min-resolution: 2dppx) {
+      background-image: url('../images/header/points.desc_@2x.png');
+    }
+  }
 }
 
 .hero__wrap {
@@ -223,7 +249,7 @@
 
   @media screen and (min-width: 1200px) {
     margin-top: 368px;
-    transform: translateX(-119);
+    transform: translateX(-155);
   }
 }
 
