--- a/src/sass/layouts/_about.scss
+++ b/src/sass/layouts/_about.scss
@@ -3,7 +3,7 @@
 
   &.section {
     padding-bottom: 40px;
-    @media screen and (min-width: 768px) {
+    @media screen and (min-width: $tablet) {
       padding-bottom: 60px;
     }
   }
@@ -17,7 +17,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    @media screen and (min-width: 768px) {
+    @media screen and (min-width: $tablet) {
       flex-direction: row;
       align-items: flex-start;
       margin-bottom: 8px;
@@ -30,20 +30,20 @@
     font-style: normal;
     font-weight: 700;
     font-size: 18px;
-    line-height: 1.22;
+    line-height: decimal-round(calc(20px / 18px));
 
     text-align: center;
     text-transform: uppercase;
 
-    @media screen and (min-width: 768px) {
+    @media screen and (min-width: $tablet) {
       font-weight: 800;
       font-size: 22px;
       letter-spacing: 0.04em;
-      line-height: 1.23;
+      line-height: decimal-round(calc(27px / 22px));
     }
-    @media screen and (min-width: 1200px) {
+    @media screen and (min-width: $desktop) {
       font-size: 30px;
-      line-height: 1.24;
+      line-height: decimal-round(calc(37px / 30px));
     }
   }
   &__title {
@@ -51,7 +51,7 @@
     font-weight: 400;
     font-size: 30px;
 
-    line-height: 1.27;
+    line-height: decimal-round(calc(38px / 30px));
     text-align: center;
     letter-spacing: 0.04em;
 
@@ -60,15 +60,15 @@
 
     margin-bottom: 32px;
 
-    @media screen and (min-width: 768px) {
+    @media screen and (min-width: $tablet) {
       font-size: 34px;
-      line-height: 1.26;
+      line-height: decimal-round(calc(43px / 34px));
       letter-spacing: 0.06em;
       width: 100%;
     }
-    @media screen and (min-width: 1200px) {
+    @media screen and (min-width: $desktop) {
       font-size: 36px;
-      line-height: 1.25;
+      line-height: decimal-round(calc(45px / 36px));
       margin-bottom: 82px;
     }
   }
@@ -85,14 +85,14 @@
     box-shadow: 0px 4.48583px 16.8218px rgba(153, 114, 23, 0.25);
     border-radius: 140.182px;
     margin-bottom: 60px;
-    @media screen and (min-width: 768px) {
+    @media screen and (min-width: $tablet) {
       width: 334.65px;
       height: 330px;
       border-radius: 165.879px;
       margin-bottom: 0px;
       margin-right: 32px;
     }
-    @media screen and (min-width: 1200px) {
+    @media screen and (min-width: $desktop) {
       width: 500px;
       height: 500px;
       border-radius: 250px;
@@ -102,11 +102,11 @@
   &__image {
     transform: translateY(21.82px);
     width: 279px;
-    @media screen and (min-width: 768px) {
+    @media screen and (min-width: $tablet) {
       width: 335px;
       transform: translateY(25.88px);
     }
-    @media screen and (min-width: 1200px) {
+    @media screen and (min-width: $desktop) {
       width: 490px;
       transform: translateY(25.88px);
     }
@@ -115,21 +115,22 @@
     margin-bottom: 4px;
     font-weight: 400;
     font-size: 12px;
-    line-height: 1.75;
+    line-height: decimal-round(calc(21px / 12px));
 
     text-align: center;
     letter-spacing: 0.04em;
     width: 220px;
-    @media screen and (min-width: 768px) {
+    @media screen and (min-width: $tablet) {
       width: 336px;
       text-align: start;
-      line-height: 1.76;
+      line-height: decimal-round(calc(21px / 12px));
       margin-bottom: 4px;
       margin-top: 5px;
     }
-    @media screen and (min-width: 1200px) {
+    @media screen and (min-width: $desktop) {
       width: 463px;
       font-size: 16px;
+      line-height: decimal-round(calc(28px / 16px));
       margin-bottom: 8px;
       margin-top: 90px;
     }
@@ -138,27 +139,27 @@
     margin-bottom: 20px;
     font-weight: 400;
     font-size: 12px;
-    line-height: 1.58;
+    line-height: decimal-round(calc(19px / 12px));
 
     text-align: center;
     width: 220px;
-    @media screen and (min-width: 768px) {
+    @media screen and (min-width: $tablet) {
       width: 336px;
       text-align: start;
-      line-height: 1.76;
+      line-height: decimal-round(calc(21px / 12px));
       margin-bottom: 8px;
     }
-    @media screen and (min-width: 1200px) {
+    @media screen and (min-width: $desktop) {
       width: 463px;
       font-size: 14px;
-      line-height: 1.94;
+      line-height: decimal-round(calc(27px / 14px));
     }
   }
   &__lowertext {
     font-style: normal;
     font-weight: 400;
     font-size: 12px;
-    line-height: 1.94;
+    line-height: decimal-round(calc(23px / 12px));
     letter-spacing: 0.04em;
     width: 336px;
     margin-bottom: 48px;
@@ -166,9 +167,10 @@
     @media screen and (max-width: 767px) {
       display: none;
     }
-    @media screen and (min-width: 1200px) {
+    @media screen and (min-width: $desktop) {
       width: 463px;
       font-size: 14px;
+      line-height: decimal-round(calc(27px / 14px));
     }
   }
 }
