fix link header

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -86,13 +86,13 @@
       <li class="mobile__item">
         <a href="./index.html" class="mobile-link link">Home</a>
       </li>
-      <li class="mobile__item">
+      <li class="js-close-menu-ida mobile__item">
         <a href="#about" class="mobile-link link">How it’s made?</a>
       </li>
-      <li class="mobile__item">
+      <li class="js-close-menu-idp mobile__item">
         <a href="#products" class="mobile-link link">Our products</a>
       </li>
-      <li class="mobile__item">
+      <li class="js-close-menu-idc mobile__item">
         <a href="#contacts" class="mobile-link link js-close-menu">Contact</a>
       </li>
     </ul>
