add slow-scroll and close mobile-menu

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -93,7 +93,7 @@
         <a href="#products" class="mobile-link link">Our products</a>
       </li>
       <li class="mobile__item">
-        <a href="#contacts" class="mobile-link link js-close-menu">Contact</a>
+        <a href="#contacts" class="mobile-link link">Contact</a>
       </li>
     </ul>
 
