--- a/src/sass/layouts/modal-windows/_modal-3-how-its-made.scss
+++ b/src/sass/layouts/modal-windows/_modal-3-how-its-made.scss
@@ -1,23 +1,24 @@
 .how-its-made_modal {
-  height: auto;
-  @media screen and(min-width: 481px) {
+  @media screen and(min-width: 768px) {
     padding: 32px 60px;
   }
 }
 
 .how-its-made_video {
   margin-bottom: 20px;
+  margin-left: auto;
+  margin-right: auto;
+  border: 0;
+  background: #000000;
+  border-radius: 10px;
 
-  @media screen and(min-width: 481px) {
+  @media screen and(min-width: 768px) {
     width: 448px;
     height: 205px;
   }
 }
 
 .how-its-made_text {
-  font-family: 'Montserrat';
-  font-weight: 400px;
-  font-size: 14px;
-  line-height: calc(20 / 14);
+  line-height: decimal-round(calc(20 / 14));
   color: var(--primery-title-color);
 }
