--- a/src/sass/layouts/modal-windows/_modal-5-franchise.scss
+++ b/src/sass/layouts/modal-windows/_modal-5-franchise.scss
@@ -1,18 +1,15 @@
 .franchise_modal {
-  @media screen and(max-width: 480px) {
-    overflow-y: scroll;
-  }
-
-  @media screen and(min-width: 481px) {
+  @media screen and(min-width: 768px) {
     padding: 32px 60px;
   }
 }
 
 .franchise_text {
   margin-bottom: 24px;
-  font-family: 'Montserrat';
-  font-weight: 400;
-  font-size: 14px;
-  line-height: calc(20 / 14);
+  line-height: decimal-round(calc(20 / 14));
   color: var(--primery-title-color);
+
+  @media screen and(min-width:768px) {
+    margin-bottom: 32px;
+  }
 }
