--- a/src/sass/layouts/modal-windows/_modal-windows-global.scss
+++ b/src/sass/layouts/modal-windows/_modal-windows-global.scss
@@ -1,11 +1,12 @@
+.js-body.active {
+  overflow: hidden;
+}
+
 .modal {
-  /* Скрываем окна  */
   opacity: 0;
   visibility: hidden;
+  overflow-y: auto;
 
-  overflow-y: scroll;
-
-  /*  Установаем ширину окна  */
   width: 100%;
   height: auto;
   max-height: 100%;
@@ -16,26 +17,33 @@
   @media screen and(min-width: 768px) {
     max-width: 568px;
     padding: 32px;
-    height: auto;
-
-    overflow-y: auto;
   }
 
-  /*  Центрируем и задаем z-index */
   position: fixed;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  z-index: 30; /* Должен быть выше чем у подложки*/
+  z-index: 30;
 
-  /*  Побочные стили   */
-  //   box-shadow: 0 3px 10px -0.5px rgba(0, 0, 0, 0.2);
-  text-align: center;
-  transition: var(--main-animation);
+  text-align: left;
+  transition: var(--main-animation) all;
 
   background-color: var(--primery-text-color);
-  border: 2px solid var(--primery-border-color);
+  border: 2px solid var(--primery-accent-color);
   border-radius: 10px;
+}
+
+.overlay {
+  opacity: 0;
+  visibility: hidden;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 20;
+  transition: var(--main-animation) all;
 }
 
 .modal.active,
@@ -44,16 +52,18 @@
   visibility: visible;
 }
 
-.js-body.active {
-  overflow: hidden;
-}
-
 .modal-close {
   position: absolute;
   top: 8px;
   right: 8px;
-  width: 8px;
-  height: 8px;
+
+  width: 16px;
+  height: 16px;
+
+  padding: initial;
+
+  background-color: var(--primery-text-color);
+  border: none;
 
   @media screen and(min-width: 768px) {
     top: 20px;
@@ -66,70 +76,17 @@
 .modal_title {
   margin-bottom: 20px;
 
+  text-align: center;
   font-family: 'Seymour One';
   font-size: 16px;
-  line-height: calc(24 / 16);
+  line-height: decimal-round(calc(24 / 16));
   color: var(--primery-title-color);
 
   @media screen and(min-width: 768px) {
     margin-bottom: 32px;
 
     font-size: 20px;
-    line-height: calc(28 / 20);
-  }
-}
-
-.overlay {
-  opacity: 0;
-  visibility: hidden;
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.3);
-  z-index: 20;
-  transition: 0.3s all;
-}
-
-.input.textarea {
-  resize: none;
-  margin-bottom: 0;
-}
-
-.modal-close {
-  background-color: var(--primery-text-color);
-  border: none;
-}
-
-.modal-submit_button {
-  margin-top: 24px;
-  width: 114px;
-  height: 42px;
-
-  background-color: var(--primery-bg-color);
-  border: none;
-  border-radius: 10px;
-
-  color: var(--primery-title-color);
-  font-family: 'Montserrat';
-  font-weight: 600;
-  font-size: 12px;
-  line-height: calc(15 / 12);
-
-  @media screen and(min-width:481px) {
-    margin-top: 32px;
-
-    width: 121px;
-    font-size: 14px;
-    line-height: calc(17 / 14);
-  }
-}
-
-.icon-close-modal {
-  @media screen and(max-width: 480px) {
-    width: 8px;
-    height: 8px;
+    line-height: decimal-round(calc(28 / 20));
   }
 }
 
@@ -140,31 +97,81 @@
   padding: 8px 12px 7px 12px;
 
   background: rgba(248, 210, 78, 0.1);
-  outline: 1px solid var(--main-bg-color);
+  outline: 1px solid #84a178;
   border: none;
   border-radius: 10px;
 
-  font-family: 'Montserrat';
-  font-weight: 400;
   font-size: 12px;
-  line-height: calc(17 / 12);
+  line-height: decimal-round(calc(17 / 12));
 
   color: var(--primery-title-color);
+
+  @media screen and(min-width: 768px) {
+    font-size: 14px;
+    line-height: decimal-round(calc(20 / 14));
+  }
+
+  &::placeholder {
+    font-size: 12px;
+    line-height: decimal-round(calc(17 / 12));
+    color: var(--primery-title-color);
+
+    @media screen and(min-width: 768px) {
+      font-size: 14px;
+      line-height: decimal-round(calc(20 / 14));
+    }
+  }
+
+  &:valid {
+    outline: 1px solid var(--main-bg-color);
+  }
+
+  &:invalid {
+    outline: 2px solid red;
+  }
 }
 
-.input::placeholder {
-  font-family: 'Montserrat';
-  font-weight: 400;
-  font-size: 12px;
-  line-height: calc(17 / 12);
+.input.textarea {
+  resize: none;
+  margin-bottom: 0;
+}
+
+.modal-submit_button {
+  display: block;
+  margin-top: 24px;
+  margin-right: auto;
+  margin-left: auto;
+  width: 114px;
+  height: 42px;
+
+  background-color: var(--primery-accent-color);
+  border: none;
+  border-radius: 10px;
 
   color: var(--primery-title-color);
-}
+  font-weight: 600;
+  font-size: 12px;
+  line-height: decimal-round(calc(15 / 12));
 
-input:valid {
-  outline: 1px solid var(--main-bg-color);
-}
+  @media screen and(min-width:768px) {
+    margin-top: 32px;
 
-.input:invalid {
-  outline: 2px solid red;
+    width: 121px;
+    font-size: 14px;
+    line-height: decimal-round(calc(17 / 14));
+  }
+
+  &:hover {
+    background-color: var(--primery-hover-color);
+  }
+
+  &:focus {
+    background-color: var(--primery-hover-color);
+    color: var(--primery-text-color);
+    outline: none;
+  }
+
+  &:disabled {
+    background-color: var(--primery-disabled-color);
+  }
 }
