--- a/src/sass/layouts/modal-windows/_modal-2-buy-now_ingredients.scss
+++ b/src/sass/layouts/modal-windows/_modal-2-buy-now_ingredients.scss
@@ -1,5 +1,6 @@
 .buy-now-ingredients_modal {
   padding: 32px 20px;
+  text-align: center;
 
   @media screen and(min-width: 768px) {
     padding: 32px 40px;
