--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -20,8 +20,8 @@
     </div>
     <div class="hero-desc">
       <p class="hero-desc__text">
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-        tempor incididunt ut labore et
+        Ice cream, frozen dairy food made from cream or butterfat, milk, sugar,
+        and flavourings.
       </p>
       <a class="hero-btn-arrow" href="#gallery">
         <svg class="icon-button" width="40px" height="15px">
@@ -40,74 +40,11 @@
         </svg>
       </a>
     </div>
-
     <ul class="hero-thumb">
       <li class="hero-thumb__numb">16</li>
       <li class="hero-thumb__text">cafes</li>
       <li class="hero-thumb__numb">23</li>
       <li class="hero-thumb__text">food trucks</li>
     </ul>
-    <!-- <div>
-  <picture>
-  <source
-  media="(min-width:1200px)"
-  srcset="
-  ./images/header/rojok.header.desc_@1x.png,
-  ./images/header/rojok.header.desc_@2x.png
-  "
-  />
-  <source
-  media="(min-width:768px)"
-  srcset="
-  ./images/header/rojok.header.tablet_@1x.png,
-  ./images/header/rojok.header.tablet_@2x.png
-  "
-  />
-  <source
-  media="(min-width:200px)"
-  srcset="
-  ./images/header/rojok.header.mobile_@1x.png,
-  ./images/header/rojok.header.mobile_@2x.png
-  "
-  />
-  <img
-  class="ice-cream__main"
-  src="/src/images/header/rojok.header.desc_@1x.png"
-  alt="ice-cream cone"
-  />
-  </picture>
-  <div class="ice-cream__description">
-  <picture>
-  <source
-  media="(min-width:1200px)"
-  srcset="
-  ./images/header/ice-cream.header.desc_@1x.png,
-  ./images/header/ice-cream.header.desc_@2x.png
-  "
-  />
-  <source
-  media="(min-width:768px)"
-  srcset="
-  ./images/header/ice-cream.header.tablet_@1x.png,
-  ./images/header/ice-cream.header.tablet_@1x.png
-  "
-  />
-  <source
-  media="(min-width:1200px)"
-  srcset="
-  /project_group/ice-cream.header.mobile_@1x.png,
-  /project_group/ice-cream.header.mobile_@2x.png
-  "
-  />
-  <img
-  width="225px"
-  height="225px"
-  class="ice-cream"
-  src="/src/images/header/ice-cream.header.desc_@1x.png"
-  alt="ice-cream on the plate"
-  />
-  </picture>
-  </div>
-  </div> -->
   </div>
 </section>
