--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -5,16 +5,8 @@
         ice cream made with <span class="hero-title__box">passion</span>
       </h1>
       <div class="wrap-hero-btn">
-        <button
-          class="btn_transparent hero-prod-btn"
-          type="button"
-          href="#products"
-        >
-          Products
-        </button>
-        <button type="button" class="made-btn" href="#about">
-          How it`s made?
-        </button>
+        <a class="hero-prod-btn" href="#products"> Products </a>
+        <a class="made-btn" href="#about"> How it`s made? </a>
       </div>
       <div class="hero-pic-box"></div>
     </div>
